CD/deployment.yaml
# Create the App Deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  name: donationsdesk-deployment
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: donationsdesk
  template:
    metadata:
      labels:
        app: donationsdesk
    spec:
    # Specify the container
      containers:
        - name: donationsdesk
          image: prengineer/donationsdesk:latest
          resources:
            limits:
              memory: "500Mi"
              cpu: "1000m"
          ports:
            - name: http
              containerPort: 80
          # Add the volume
          volumeMounts:
          - mountPath: "/config"
            name: donationsdesk-pv-storage
      # Specify the volume
      volumes:
      - name: donationsdesk-pv-storage
        persistentVolumeClaim:
          claimName: donationsdesk-pv-claim
