CD/service.yaml
# Create the Exposed App Service

apiVersion: v1
kind: Service
metadata:
  name: donationsdesk
  namespace: production
spec:
  selector:
    app: donationsdesk
  type: LoadBalancer
  ports:
  - name: http
    port: 80
    targetPort: 80
